--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "private": true,
   "homepage": "https://demos.creative-tim.com/paper-dashboard-react/#/dashboard",
   "dependencies": {
+    "@kennethormandy/react-fittext": "^0.6.0",
     "bootstrap": "4.3.1",
     "chart.js": "2.8.0",
     "firebase": "^7.2.3",
     "history": "4.9.0",
     "node-sass": "4.12.0",
     "perfect-scrollbar": "1.4.0",
+    "rc-progress": "^2.5.2",
     "react": "16.8.6",
     "react-chartjs-2": "2.7.6",
+    "react-circular-progressbar": "^2.0.3",
     "react-dom": "16.8.6",
     "react-google-maps": "9.4.5",
     "react-notification-alert": "0.0.12",
