--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "paper-dashboard-react",
   "version": "1.1.0",
   "private": true,
-  "homepage": "https://demos.creative-tim.com/paper-dashboard-react/#/dashboard",
+  "homepage": "https://54.88.31.162/",
   "dependencies": {
     "@kennethormandy/react-fittext": "^0.6.0",
     "bootstrap": "4.3.1",
